--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -50,6 +50,7 @@
     --transition: 0.2s linear;
     --sidebar-width: 300px;
     --modal-backdrop: rgba(10, 9, 11, 0.3);
+    --modal-z-index: 1;
 
     // Role colors
     --superadmin-color: #00008c;
