--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -1,10 +1,33 @@
 .Modal {
     background-color: var(--primary-invert-color);
-    padding: 1.5rem 2rem;
     border-radius: var(--default-border-radius);
-    min-width: 35%;
+    min-width: 450px;
     max-height: 60%;
     overflow-y: auto;
+    position: relative;
+}
+
+.header,
+.footer {
+    position: sticky;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--primary-invert-color);
+    z-index: var(--modal-z-index);
+}
+
+.header {
+    border-bottom: 1px solid var(--stroke-color);
+    padding: 1.5rem 2rem;
+}
+
+.footer {
+    border-top: 1px solid var(--stroke-color);
+    display: flex;
+    justify-content: flex-end;
+    padding: 1.5rem 2rem;
 }
 
 .backdrop {
@@ -32,4 +55,10 @@
 
 .inner {
     margin-top: 1.2rem;
+    padding: 1.5rem 2rem;
+    padding-top: 0.25rem;
+}
+
+.button {
+    width: fit-content;
 }
