--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -51,6 +51,7 @@
     --sidebar-width: 300px;
     --modal-backdrop: rgba(10, 9, 11, 0.3);
     --modal-z-index: 1;
+    --modal-padding: 1.5rem 2rem;
 
     // Role colors
     --superadmin-color: #00008c;
