--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -2,13 +2,13 @@
     background-color: var(--primary-invert-color);
     border-radius: var(--default-border-radius);
     min-width: 450px;
+    max-width: 450px;
     max-height: 60%;
     overflow-y: auto;
     position: relative;
 }
 
-.header,
-.footer {
+.header {
     position: sticky;
     top: 0;
     bottom: 0;
@@ -16,17 +16,7 @@
     right: 0;
     background-color: var(--primary-invert-color);
     z-index: var(--modal-z-index);
-}
-
-.header {
     border-bottom: 1px solid var(--stroke-color);
-    padding: 1.5rem 2rem;
-}
-
-.footer {
-    border-top: 1px solid var(--stroke-color);
-    display: flex;
-    justify-content: flex-end;
     padding: 1.5rem 2rem;
 }
 
@@ -54,11 +44,6 @@
 }
 
 .inner {
-    margin-top: 1.2rem;
-    padding: 1.5rem 2rem;
     padding-top: 0.25rem;
-}
-
-.button {
-    width: fit-content;
+    padding-bottom: 0;
 }
