--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,43 +1,43 @@
 .Button {
-  font: var(--font-m);
-  font-weight: 600;
-  padding: 0.5rem;
-  border: 0;
-  border-radius: var(--default-border-radius);
-  cursor: pointer;
-  transition: background var(--transition);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.75rem;
+    font: var(--font-m);
+    font-weight: 600;
+    padding: 0.5rem;
+    border: 0;
+    border-radius: var(--default-border-radius);
+    cursor: pointer;
+    transition: background var(--transition);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.75rem;
 
-  &:disabled {
-    background-color: var(--stroke-color);
-  }
+    &:disabled {
+        background-color: var(--stroke-color) !important;
+    }
 }
 
 .size_m {
-  padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1.5rem;
 }
 
 .primary {
-  background-color: var(--primary-variant-color);
-  color: var(--primary-invert-color);
+    background-color: var(--primary-variant-color);
+    color: var(--primary-invert-color);
 
-  &:hover {
-    background-color: var(--primary-variant-hover-color);
-  }
+    &:hover {
+        background-color: var(--primary-variant-hover-color);
+    }
 }
 
 .secondary {
-  background-color: var(--primary-variant-bg-color);
-  color: var(--primary-variant-color);
+    background-color: var(--primary-variant-bg-color);
+    color: var(--primary-variant-color);
 
-  &:hover {
-    background-color: var(--primary-variant-bg-hover-color);
-  }
+    &:hover {
+        background-color: var(--primary-variant-bg-hover-color);
+    }
 }
 
 .max {
-  width: 100%;
+    width: 100%;
 }
