--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -13,6 +13,7 @@
 
     &:disabled {
         background-color: var(--stroke-color) !important;
+        cursor: not-allowed !important;
     }
 }
 
