--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -33,6 +33,7 @@
     --quinary-color: #bcbcc8;
     --light-grey-color: #f8f8f8;
     --bg-color: #f3f3f7;
+    --marked-row-bg-color: #eeeef1;
     --red-color: #e12121;
     --primary-invert-color: #ffffff;
 
