--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     gap: 0.75rem;
+    box-shadow: 0px 1.5px 4px -1px rgba(10, 9, 11, 0.07);
 
     &:disabled {
         background-color: var(--stroke-color) !important;
