--- a/src/shared/ui/Tabs/Tabs.module.scss
+++ b/src/shared/ui/Tabs/Tabs.module.scss
@@ -32,3 +32,7 @@
     color: var(--primary-color);
     box-shadow: 0px 1.5px 4px -1px rgba(10, 9, 11, 0.07);
 }
+
+.tabPanel {
+    width: 100%;
+}
