Add loader, contact-histories

--- a/src/shared/ui/LoaderContainer/LoaderContainer.module.scss
+++ b/src/shared/ui/LoaderContainer/LoaderContainer.module.scss
@@ -1,11 +1,8 @@
-.ContactHistoryFeed {
+.LoaderContainer {
     width: 100%;
     min-height: 20rem;
-}
-
-.noData {
-    height: 20rem;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    transform: scale(0.8);
 }
