--- a/src/features/ContactHistory/ui/AddContactHistory/AddContactHistory.module.scss
+++ b/src/features/ContactHistory/ui/AddContactHistory/AddContactHistory.module.scss
@@ -1,9 +1,10 @@
 .AddContactHistory {
-    margin-top: 1rem;
+    min-height: 17rem;
+    padding-top: 1rem;
 }
 
 .footer {
-    margin-top: 1.5rem;
+    margin-top: 2rem;
     position: sticky;
     padding-bottom: 1rem;
     top: 0;
