--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -8,6 +8,17 @@
     position: relative;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .header {
     position: sticky;
     top: 0;
@@ -27,9 +38,6 @@
     left: 0;
     right: 0;
     background-color: var(--modal-backdrop);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .title {
