--- a/src/entities/ContactHistory/ui/ContactHistoryRow/ContactHistoryRow.module.scss
+++ b/src/entities/ContactHistory/ui/ContactHistoryRow/ContactHistoryRow.module.scss
@@ -2,6 +2,11 @@
     width: 100%;
     border-bottom: 1px solid var(--stroke-color);
     padding: 1rem 0;
+
+    &:nth-last-child(1) {
+        padding-bottom: 2rem;
+        border: none;
+    }
 }
 
 .comment {
