--- a/src/shared/ui/Avatar/Avatar.module.scss
+++ b/src/shared/ui/Avatar/Avatar.module.scss
@@ -1,9 +1,9 @@
 .Avatar {
-    height: 24px;
-    width: 24px;
+    height: 21px;
+    width: 21px;
     background-color: var(--primary-variant-color);
     border-radius: 50%;
-    font: var(--font-s);
+    font-size: 12px;
     display: flex;
     align-items: center;
     justify-content: center;
