--- a/src/shared/ui/Icon/Icon.module.scss
+++ b/src/shared/ui/Icon/Icon.module.scss
@@ -2,37 +2,41 @@
 }
 
 .primary {
-  path {
-    fill: var(--primary-color) !important;
-  }
+    path {
+        fill: var(--primary-color) !important;
+    }
 }
 
 .primary-variant {
-  path {
-    fill: var(--primary-variant-color) !important;
-  }
+    path {
+        fill: var(--primary-variant-color) !important;
+    }
 }
 
 .secondary {
-  path {
-    fill: var(--secondary-color) !important;
-  }
+    path {
+        fill: var(--secondary-color) !important;
+    }
 }
 
 .tertiary {
-  path {
-    fill: var(--tertiary-color) !important;
-  }
+    path {
+        fill: var(--tertiary-color) !important;
+    }
 }
 
 .quatinary {
-  path {
-    fill: var(--quatinary-color) !important;
-  }
+    path {
+        fill: var(--quatinary-color) !important;
+    }
 }
 
 .quinary {
-  path {
-    fill: var(--quinary-color) !important;
-  }
+    path {
+        fill: var(--quinary-color) !important;
+    }
+}
+
+.pointer {
+    cursor: pointer;
 }
