--- a/src/shared/ui/Tabs/Tabs.module.scss
+++ b/src/shared/ui/Tabs/Tabs.module.scss
@@ -30,7 +30,7 @@
 .selected {
     background-color: white !important;
     color: var(--primary-color);
-    box-shadow: 0px 1.5px 4px -1px rgba(10, 9, 11, 0.07);
+    box-shadow: var(--box-shadow);
 }
 
 .tabPanel {
