--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -48,6 +48,7 @@
     // Aditional parameters
     --box-shadow: 0px 1.5px 4px -1px rgba(10, 9, 11, 0.07);
     --default-border-radius: 8px;
+    --large-border-radius: 5em;
     --transition: 0.2s linear;
     --sidebar-width: 300px;
     --modal-backdrop: rgba(10, 9, 11, 0.3);
