feat/fix-header

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -53,6 +53,7 @@
     --sidebar-width: 300px;
     --modal-backdrop: rgba(10, 9, 11, 0.3);
     --modal-z-index: 1;
+    --table-z-index: 3;
     --modal-padding: 1rem 2rem 1.5rem 2rem;
 
     // Role colors
