--- a/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
+++ b/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
@@ -16,6 +16,10 @@
     color: var(--quatinary-color);
     font: var(--font-s);
     font-weight: 500;
+    position: sticky;
+    top: 0;
+    background-color: var(--bg-color);
+    z-index: var(--table-z-index);
 }
 
 .headerTitle,
@@ -28,7 +32,6 @@
 }
 
 .header {
-    border-top: 1px solid var(--stroke-color);
     border-bottom: 1px solid var(--stroke-color);
 }
 
