--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -40,6 +40,7 @@
     cursor: pointer;
     transition: background var(--transition);
     border-radius: 0.5rem;
+    height: 29px;
 
     &:hover {
         background-color: var(--light-grey-color);
