--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -29,8 +29,8 @@ body {
 
 ::-webkit-scrollbar {
     max-width: 349px;
-    height: 6px;
-    width: 6px;
+    height: 10px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -46,5 +46,5 @@ body {
 /* Thumb */
 *::-webkit-scrollbar-thumb {
     border-radius: 14px;
-    background: #e0e0eb;
+    background: #d9d9e4;
 }
