--- a/src/shared/ui/Text/Text.module.scss
+++ b/src/shared/ui/Text/Text.module.scss
@@ -39,6 +39,10 @@
     color: var(--primary-color);
 }
 
+.primary-variant {
+    color: var(--primary-variant-color);
+}
+
 .secondary {
     color: var(--secondary-color);
 }
