--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -1,5 +1,5 @@
 .Sidebar {
-    min-width: var(--sidebar-width);
+    width: var(--sidebar-width);
     height: 100vh;
     background-color: var(--primary-invert-color);
     padding: 1.6rem 1.1rem;
@@ -18,7 +18,9 @@
     align-items: center;
     justify-content: center;
 }
-
+.name {
+    width: max-content;
+}
 .sidebarItem {
     cursor: pointer;
     padding: 0.25rem 0.75rem;
