add pass update button to users

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -36,10 +36,9 @@
     --marked-row-bg-color: #eeeef1;
     --red-color: #e12121;
     --primary-invert-color: #ffffff;
-
-    // Aditional colors
+    --primaty-variant-color-hover: #522de5;
     --stroke-color: #e8e8e8;
-
+    // Aditional colors
     // Errors
     --error-color-dark: #c50000;
     --error-color-bg: rgba(238, 0, 0, 0.1);
