--- a/src/shared/ui/UpdatePassUserButton/UpdatePassUserButton.module.scss
+++ b/src/shared/ui/UpdatePassUserButton/UpdatePassUserButton.module.scss
@@ -12,7 +12,6 @@
     gap: 0.75rem;
     box-shadow: var(--box-shadow);
     margin-top: 3px;
-
     &:disabled {
         background-color: var(--stroke-color) !important;
         cursor: not-allowed !important;
@@ -24,11 +23,11 @@
 }
 
 .primary {
-    background-color: var(--red-color);
+    background-color: var(--primary-variant-color);
     color: var(--primary-invert-color);
 
     &:hover {
-        background-color: var(--error-color-dark);
+        background-color: var(--primaty-variant-color-hover);
     }
 }
 
