--- a/src/features/Users/ui/UpdateUserPassModal/UpdateUserPassModal.module.scss
+++ b/src/features/Users/ui/UpdateUserPassModal/UpdateUserPassModal.module.scss
@@ -14,7 +14,13 @@
     justify-content: flex-end;
     padding: 1.5rem 2rem;
 }
+.labelCheckbox {
+    margin-right: 0.5rem;
+}
 
+.checkbox {
+    margin-right: 0.5rem;
+}
 .wrapper {
     padding: var(--modal-padding);
 }
