delete button update

--- a/src/pages/Users/ui/UsersPage.module.scss
+++ b/src/pages/Users/ui/UsersPage.module.scss
@@ -9,7 +9,10 @@
         margin-bottom: 2rem;
         margin-top: 3rem;
     }
-
+    .buttonUpdate {
+        width: 3.2rem;
+        margin-left: 1rem;
+    }
     .user-table {
         width: 100%;
         border-collapse: separate;
