logout style update

--- a/src/widgets/Sidebar/ui/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar.module.scss
@@ -60,4 +60,7 @@
     display: flex;
     cursor: pointer;
     width: 5rem;
+    &:hover {
+        color: var(--primary-variant-hover-color);
+    }
 }
