Add sidebar width variable and update styles

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -50,6 +50,7 @@
     --large-border-radius: 5em;
     --transition: 0.2s linear;
     --sidebar-width: 300px;
+    --sidebar-width-screwed: 5rem;
     --modal-backdrop: rgba(10, 9, 11, 0.3);
     --modal-z-index: 4;
     --modal-backdrop-z-index: 3;
