header color change in Leads tabel

--- a/src/shared/ui/SortHeader/SortHeader.module.scss
+++ b/src/shared/ui/SortHeader/SortHeader.module.scss
@@ -3,6 +3,7 @@
     font: var(--font-s);
     font-weight: 500;
     width: fit-content;
+    color: var(--primary-variant-color);
 }
 
 .disabled {
