change placeholder and row background color

--- a/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
+++ b/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
@@ -45,7 +45,7 @@
 }
 
 .marked {
-    background-color: var(--marked-row-bg-color);
+    background-color: var(--primary-variant-bg-color);
 }
 
 .noData {
