--- a/src/features/ContactPersons/ui/PersonsTable.module.scss
+++ b/src/features/ContactPersons/ui/PersonsTable.module.scss
@@ -40,7 +40,7 @@
 }
 
 .marked {
-    background-color: var(--marked-row-bg-color);
+    background-color: var(--primary-variant-bg-color);
 }
 
 .noData {
