--- a/src/features/Municipalities/ui/MunicipalitiesTable.module.scss
+++ b/src/features/Municipalities/ui/MunicipalitiesTable.module.scss
@@ -47,7 +47,7 @@
 }
 
 .marked {
-    background-color: var(--marked-row-bg-color);
+    background-color: var(--primary-variant-bg-color);
 }
 
 .noData {
