--- a/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
+++ b/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
@@ -55,3 +55,9 @@
     justify-content: center;
     align-items: center;
 }
+.narrowColumn {
+    max-width: 7vh;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
