adding color selection

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -39,6 +39,7 @@
     --primaty-variant-color-hover: #522de5;
     --stroke-color: #e8e8e8;
     // Aditional colors
+    --primaty-variant-bg-marked-color: rgba(107, 70, 254, 0.1);
     // Errors
     --error-color-dark: #c50000;
     --error-color-bg: rgba(238, 0, 0, 0.1);
