--- a/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
+++ b/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
@@ -45,7 +45,8 @@
 }
 
 .marked {
-    background-color: var(--primaty-variant-bg-marked-color);
+    background-color: var(--primary-variant-bg-marked-color);
+    transition: background-color 0.3s ease;
 }
 
 .noData {
