--- a/src/features/Company/ui/CompaniesPagination/CompaniesPagination.module.scss
+++ b/src/features/Company/ui/CompaniesPagination/CompaniesPagination.module.scss
@@ -19,15 +19,46 @@
     margin-left: 1rem;
 }
 
+.pageInput {
+    padding: 4px 8px;
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    font-size: var(--font-s);
+    width: 60px;
+}
+
+.pageSizeSelect {
+    padding: 4px 8px;
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    font-size: var(--font-s);
+}
+
 .colorSquare {
     width: 30px;
     height: 30px;
     cursor: pointer;
     margin-right: 8px;
+    transition:
+        width 0.3s ease,
+        height 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.colorSquare:hover {
+    width: 40px;
+    height: 40px;
 }
 
 .colorSquareContainer {
     display: flex;
     gap: 4px;
     margin-bottom: 1rem;
+}
+
+.paginationContainer {
+    align-items: center;
+    display: flex;
 }
