--- a/src/features/Campaign/ui/CampaignTable/CampaignTable.module.scss
+++ b/src/features/Campaign/ui/CampaignTable/CampaignTable.module.scss
@@ -1,8 +1,21 @@
-.tableWrapper {
+.campaignTables {
     width: calc(100vw - var(--sidebar-width) - 2rem);
-    overflow-x: scroll;
-    overflow-y: scroll;
-    height: 75vh;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
+}
+
+.tableWrapper {
+    flex: 1;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.scrollable-table {
+    flex: 1;
+    overflow-y: auto;
 }
 
 .currency {
@@ -10,10 +23,13 @@
     margin-left: 4px;
     vertical-align: middle;
 }
-
+.tableheader {
+    margin-bottom: 1rem;
+}
 .CampaignTable {
     width: max-content;
     border-collapse: collapse;
+    margin-bottom: 2rem;
 }
 
 .flexRender {
@@ -21,14 +37,7 @@
 }
 
 .headerTitle {
-    text-align: left;
-    color: var(--quatinary-color);
-    font: var(--font-s);
-    font-weight: 500;
-    position: sticky;
-    top: 0;
-    background-color: var(--bg-color);
-    z-index: var(--table-z-index);
+    margin-bottom: 1rem;
 }
 
 .headerTitle,
@@ -63,4 +72,36 @@
 
 .boldText {
     font-weight: bold;
+}
+
+.tableSpacing {
+    height: 2rem;
+}
+
+.greyBackground {
+    background-color: grey;
+}
+
+.yellowBackground {
+    background-color: yellow;
+}
+
+.greenBackground {
+    background-color: green;
+}
+
+.darkGreyBackground {
+    background-color: darkgrey;
+}
+
+.redBackground {
+    background-color: red;
+}
+
+.purpleBackground {
+    background-color: purple;
+}
+
+.limeBackground {
+    background-color: lime;
 }
