add some styling fix

--- a/src/features/Campaign/ui/CampaignTable/CampaignTable.module.scss
+++ b/src/features/Campaign/ui/CampaignTable/CampaignTable.module.scss
@@ -94,14 +94,19 @@
     background-color: darkgrey;
 }
 
+.limeBackground {
+    background-color: lime;
+}
+.whiteText {
+    color: white;
+}
+
 .redBackground {
     background-color: red;
+    color: white;
 }
 
 .purpleBackground {
     background-color: purple;
-}
-
-.limeBackground {
-    background-color: lime;
+    color: white;
 }
