--- a/src/pages/Campaign/ui/CampaignPage.module.scss
+++ b/src/pages/Campaign/ui/CampaignPage.module.scss
@@ -4,14 +4,13 @@
     flex-direction: column;
     align-items: flex-start;
     max-height: 100vh;
-
     background-color: var(--bg-color);
     font-family: var(--font-family);
     color: var(--primary-color);
 }
 .scollable {
     width: calc(100vw - var(--sidebar-width) - 2rem);
-    overflow-x: scroll;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 75vh;
 }
