chore: Update status colors in global.scss and status.ts

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -74,6 +74,8 @@
     --status-blue-bg-color: #dee9ff;
     --status-grey-color: #4f4d55;
     --status-grey-bg-color: #ebe5ff;
+    --status-yellow-color: #ffe6af;
+    --status-green-light-color: #6cb89c;
 }
 
 .dp__theme_light {
