chore: Update status colors in global.scss and status.ts

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -75,7 +75,8 @@
     --status-grey-color: #4f4d55;
     --status-grey-bg-color: #ebe5ff;
     --status-yellow-color: #ffe6af;
-    --status-green-light-color: #6cb89c;
+    --status-green-bg-color: #6cb89c;
+    --status-gray-bg-color: #d2d2d2;
 }
 
 .dp__theme_light {
