--- a/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
+++ b/src/features/Company/ui/CompaniesTable/CompaniesTable.module.scss
@@ -77,3 +77,52 @@
     white-space: pre-wrap;
     font: var(--font-s);
 }
+// backgrounds colors for the table
+
+.bgColor0To99 {
+    background-color: #b2d8b8;
+}
+
+.bgColor100To499 {
+    background-color: #c8e6c9;
+}
+
+.bgColor500To999 {
+    background-color: #e8f5e9;
+}
+
+.bgColor1000To1499 {
+    background-color: #fff9c4;
+}
+
+.bgColor1500To1999 {
+    background-color: #ffecb3;
+}
+
+.bgColor2000To2499 {
+    background-color: #fff176;
+}
+
+.bgColor2500To2999 {
+    background-color: #ffd54f;
+}
+
+.bgColor3000To3499 {
+    background-color: #ffb74d;
+}
+
+.bgColor3500To3999 {
+    background-color: #ff8a65;
+}
+
+.bgColor4000To4499 {
+    background-color: #ff6f6f;
+}
+
+.bgColor4500To4999 {
+    background-color: #ff5252;
+}
+
+.bgColor5000Plus {
+    background-color: #ff1744;
+}
