chore: Update CampaignTable module styles for better consistency

--- a/src/features/Campaign/ui/CampaignTable/CampaignTable.module.scss
+++ b/src/features/Campaign/ui/CampaignTable/CampaignTable.module.scss
@@ -84,9 +84,11 @@
 }
 .darkerGreenBackground {
     background-color: #62b272;
+    color: white;
 }
 .darkestGreenBackground {
     background-color: #489b57;
+    color: white;
 }
 
 .creamBackground {
@@ -99,10 +101,12 @@
 
 .pastelYellowBackground {
     background-color: #f4a261;
+    color: white;
 }
 
 .pastelPurpleBackground {
     background-color: #d1a7d3;
+    color: white;
 }
 
 .pastelRedBackground {
